--- a/C867/C867/C867.vcxproj
+++ b/C867/C867/C867.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp" />
+    <ClCompile Include="..\roster.cpp" />
     <ClCompile Include="..\student.cpp" />
   </ItemGroup>
   <ItemGroup>
