--- a/C867/C867/C867.vcxproj.filters
+++ b/C867/C867/C867.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="..\student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\roster.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\degree.h">
